Correct location adjustment in FrameView::ConvertSelfToChild

r471225 removed a negation in the translation of a point between frame
coordinate spaces. This CL restores the negation.

BUG=721912

Review-Url: https://codereview.chromium.org/2880043003
Cr-Commit-Position: refs/heads/master@{#471506}

Former-commit-id: 204a990c6d1d1cb9a72f50fe1a0639b0c176351d